Fixing Underground Floor column sorting Updating scrollbar settings and grid height

--- a/app/assets/stylesheets/cbecc.css.scss
+++ b/app/assets/stylesheets/cbecc.css.scss
@@ -129,7 +129,7 @@
 // Grid Styling
 .layers-grid {
   width: 668px;
-  height: 220px;
+  height: 230px;
 }
 
 .long-grid {
@@ -138,11 +138,11 @@
 }
 
 .space-creator-grid-1 {
-  height: 82px;
+  height: 100px;
 }
 
 .space-creator-grid-2 {
-  height: 63px;
+  height: 80px;
 }
 
 .plant-grid {
